Update Project Card titles
Different titles for project
cards. Varied description
length. Added fixed width for
Announcement & Trending
column. Auto-fit project cards.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="project-title">
                         <h2>Super Cool Project</h2>
                     </div>
-                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
+                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem.</div>
                     <div class="card-icon-container">
                         <div class="card-icon-spacing"></div>
                         <div class="icon-section">
@@ -163,9 +163,9 @@
                 </div>
                 <div class="projects">
                     <div class="project-title">
-                        <h2>Super Cool Project</h2>
+                        <h2>Another Cool Project</h2>
                     </div>
-                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
+                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum.</div>
                     <div class="card-icon-container">
                         <div class="card-icon-spacing"></div>
                         <div class="icon-section">
@@ -183,9 +183,9 @@
                 </div>
                 <div class="projects">
                     <div class="project-title">
-                        <h2>Super Cool Project</h2>
+                        <h2>Mega Cool Project</h2>
                     </div>
-                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
+                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis.</div>
                     <div class="card-icon-container">
                         <div class="card-icon-spacing"></div>
                         <div class="icon-section">
@@ -203,9 +203,9 @@
                 </div>
                 <div class="projects">
                     <div class="project-title">
-                        <h2>Super Cool Project</h2>
+                        <h2>Ultra Cool Project</h2>
                     </div>
-                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
+                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto.</div>
                     <div class="card-icon-container">
                         <div class="card-icon-spacing"></div>
                         <div class="icon-section">
@@ -223,9 +223,9 @@
                 </div>
                 <div class="projects">
                     <div class="project-title">
-                        <h2>Super Cool Project</h2>
+                        <h2>Epic Project</h2>
                     </div>
-                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
+                    <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut.</div>
                     <div class="card-icon-container">
                         <div class="card-icon-spacing"></div>
                         <div class="icon-section">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="projects">
                     <div class="project-title">
-                        <h2>Super Cool Project</h2>
+                        <h2>Masterpiece Project</h2>
                     </div>
                     <div class="project-details">Lorem ipsum dolor sit amet. Id enim possimus et quidem galisum sed sint quibusdam aut rerum nesciunt aut fuga iusto et quod veritatis cum quia cupiditate! Ut voluptatem dolore id doloremque voluptatum eos praesentium aspernatur.</div>
                     <div class="card-icon-container">
